Hero Images fixed regarding a layout issue

--- a/css/main.scss
+++ b/css/main.scss
@@ -110,6 +110,10 @@ nav img{
 
 #hero-fans{
 	width: 100% !important;
+	margin-top: 10%;
+}
+
+#hero-graphic{
 	margin-top: -70%;
 }
 
